# en-cavale-visual

./: .gitignore  Deployment.md  README.md  docker-compose.yml
backend/: .env.dist  .flaskenv  .gitignore  README.md  config.py  encavale.py  pyproject.toml
backend/en_cavale/: __init__.py  commands.py  config.py  flask.py  models.py  routes.py  run_flask_shell.py  spending.py
backend/en_cavale/spending/: __init__.py  routes.py  spending.py
backend/migrations/versions/: 642743956608_add_region_field_in_country_table.py  9d54be5c0995_seed_initial_data.py  b1e892b046ae_spendings_countries_and_categories_.py
db/: database.ini  migration.sql
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: HelloWorld.vue  PlotlyChart.vue
scripts/: drop_all_tables.sql
